--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     @font-face {
-      font-family: RockSalt;
+      font-family: Grotesk;
       src: url(assets/font.ttf) format("truetype");
     }
   </style>
